tests/compile-fail/no_root_prefix.rs
use type_path::type_path;

fn main() {
    type_path!(std::io::BufWriter);
}
