tests/compile-fail/no_root_prefix.stderr
error: no rules expected the token `std`
 --> tests/compile-fail/no_root_prefix.rs:4:16
  |
4 |     type_path!(std::io::BufWriter);
  |                ^^^ no rules expected this token in macro call
  |
note: while trying to match `::`
 --> src/lib.rs
  |
  |     (::$($segment:ident):: +$(::*$($empty:tt)? )?) => {{
  |      ^^
